manifest/objects/LVGO__AccountContactRelation__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__Account_Name__c</fullName>
        <formula>LVGO__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>LVGO__Account__c</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>AccountContactRelations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Contact_Email__c</fullName>
        <formula>LVGO__Contact__r.LVGO__Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Contact_Name__c</fullName>
        <formula>LVGO__Contact__r.LVGO__FirstName__c + &quot; &quot; + LVGO__Contact__r.LVGO__LastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>LVGO__Contact__c</referenceTo>
        <relationshipLabel>Account Contact Relations</relationshipLabel>
        <relationshipName>AccountContactRelations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Relationship_Strength__c</fullName>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Acquaintance</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Roles__c</fullName>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actuary / Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Billing POC</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Budget Approver</fullName>
                </value>
                <value>
                    <fullName>Business Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Business Influencer</fullName>
                </value>
                <value>
                    <fullName>Care Management Lead / POC</fullName>
                </value>
                <value>
                    <fullName>Client Implementation Lead / POC</fullName>
                </value>
                <value>
                    <fullName>Client Success Lead / POC</fullName>
                </value>
                <value>
                    <fullName>Clinical Lead / POC</fullName>
                </value>
                <value>
                    <fullName>Consulting Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Enrollment Marketing POC</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Gatekeeper</fullName>
                </value>
                <value>
                    <fullName>Lead Consultant</fullName>
                </value>
                <value>
                    <fullName>Legal Lead / POC</fullName>
                </value>
                <value>
                    <fullName>Marketing Recipient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement Lead / POC</fullName>
                </value>
                <value>
                    <fullName>Sales Lead / POC</fullName>
                </value>
                <value>
                    <fullName>Scorecard Recipient</fullName>
                </value>
                <value>
                    <fullName>Supporting ASO Executive - Commercial Partner Executive</fullName>
                </value>
                <value>
                    <fullName>Supporting Consultant</fullName>
                </value>
                <value>
                    <fullName>Supporting Other Partner Executive</fullName>
                </value>
                <value>
                    <fullName>Supporting PBM Executive</fullName>
                </value>
                <value>
                    <fullName>Technical Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Technical Influencer</fullName>
                </value>
                <value>
                    <fullName>Telemedicine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Send_Enrollment_Survey__c</fullName>
        <formula>IF(INCLUDES(LVGO__Roles__c, &quot;Client Implementation Lead / POC&quot;),TRUE,
			IF(INCLUDES(LVGO__Roles__c, &quot;Client Success Lead / POC&quot;),TRUE,
						IF(INCLUDES(LVGO__Roles__c, &quot;Enrollment Marketing POC&quot;),TRUE,FALSE)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Enrollment Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>LV Account Contact Relationship</label>
    <listViews>
        <fullName>LVGO__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LV Account Contact Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>